update: add prologue

--- a/web/src/styles/common.scss
+++ b/web/src/styles/common.scss
@@ -2,3 +2,11 @@ html,
 body {
   background: #202124;
 }
+
+.bg {
+  width: 100%;
+  height: 100vh;
+  background-color: #202214;
+  background-position: center center;
+  background-size: cover;
+}
