update: add user list

--- a/web/src/containers/Map/map.scss
+++ b/web/src/containers/Map/map.scss
@@ -10,4 +10,11 @@
   position: relative;
   z-index: 1;
   cursor: pointer;
+  span {
+    position: absolute;
+    top: 100%;
+    color: #FFF;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
